[package]
name = "simple_port_scanner"
version = "2.0.0"
authors = ["Error404"]
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
indicatif = "0.18.4"
pnet = "0.35.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
