[package]
name = "simple_port_scanner"
version = "2.0.0"
authors = ["Error404"]
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
comfy-table = "7.2.2"
indicatif = "0.18.4"
lazy_static = "1.5.0"
native-tls = "0.2.18"
pnet = "0.35.0"
rand = "0.10.1"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
